# learn

./: .gitignore  .gitmodules  Booklist.adoc  README.md  README.org  Roadmap.adoc  compile_and_use_source_code_of_apue_3rd_edition.md  emacs-workspace  gmon.out  go.mod  justfile  leanpkg.toml  octave-workspace  package-lock.json  sage_math_play.ipynb
Bash/: play.sh
C++/Play/: .gdb_history  SalesData.h  Screen.cpp  Screen.h  aliasing.cpp  ex1.cpp  files.list  gl.cpp  hello  hello.c  hello.cpp  meson.build  modern_cpp_containers.cpp  mystring.cpp  mystring.h  output.txt  pacrecover  pkglist  pkglist.orig  strtref.cpp  test_ast_dump.cpp  test_clang_condition_init_decl.cpp  test_clang_link.c  test_clang_link.s  test_clang_preprocessor.cpp  test_clang_round_mode.c  test_clang_round_mode.cpp  test_clang_round_mode.ll  test_clang_rv64.ll  test_const.cpp  test_cuda_denormal.cu  test_cuda_nan.cu  test_float.cpp  test_float_repr.cpp  test_float_repr.ll  test_hello.c  test_sales_data.cpp  test_scanf_allocate.cpp  test_screen.cpp  triton_play.py  (+2 more)
C++/Play/cpp_primer/: meson.build
C++/Play/cpp_primer/ch5/: ex_5_6_3.cpp  meson.build
C++/Play/play_cpp_modules/: CMakeLists.txt  foo.cxx  main.cxx  use_std.cxx
C++/RayTracingInOneWeekend/: meson.build
C++/RayTracingInOneWeekend/src/: hello.cpp  meson.build
C++/StudentsManager/: CMakeLists.txt  MyString.cpp  MyString.h  searchMenu.c
C++/algorithms_vitalyr/: CMakeLists.txt  conanfile.txt  library.h
C++/algorithms_vitalyr/astar/: CMakeLists.txt  a.out  astar.cpp  astar.h.gch
C++/algorithms_vitalyr/cuda_play/: vec_add.cu
C++/algorithms_vitalyr/data_structure/vec/: vec.cpp  vec.h
C++/algorithms_vitalyr/data_structure/vector/: vec.h
C++/algorithms_vitalyr/kaleidoscope/: kaleidoscope.cpp  kaleidoscope.h  lexer.cpp
C++/algorithms_vitalyr/play/: Person.cpp  Person.h  SalesData.cpp  SalesData.h  compilation_call_flow.txt  cpp.cpp  play_nothing.cpp  test_clang.cpp  test_clang1.cpp  test_clang2.cpp  test_clang_template.cpp  test_input  test_input.c
C++/algorithms_vitalyr/play_tbgen/: kitchen.td
C++/algorithms_vitalyr/problems/leetcode/: lc141_has_cycle.cpp
C++/algorithms_vitalyr/search/: astar.cpp  bfs.cpp  pathfinder.cpp  triangle.py  ucs.cpp
C++/algorithms_vitalyr/search/AStarClear/: astar.cpp  astar.h  main.cpp
C++/algorithms_vitalyr/search/AStarClear copy/: astar.cpp  astar.h
C++/beginning_cpp23/: CMakeLists.txt  justfile  main.cpp
C++/beginning_cpp23/src/: hello.cpp
C++/cuda_play/: .gitignore  CMakeLists.txt  add_sync.cu  b.asm  main.cu  oneapi_play.cpp  record_replay.cpp  test_approx.cu  test_approx.ptx  test_constant.cu  test_constant.ptx  test_round.cu
C++/cuda_play/src/: add_sync.cu  cuda_fp8_cvt.cu  cuda_printf.cu  good_host_register.cu  main  only_host_register.cu  regex.cpp  simple_host_register.cu  small_ecs.cpp  threads_play.cu  tiny_ecs.cpp  tiny_ray_tracer.cpp  use_host_register.cu  vec_add.cu  vec_add_host.cpp  vec_add_sycl
C/trapezoidal_rule/: CMakeLists.txt  main.c
Graphics/glad/: CMakeLists.txt
Graphics/glad/include/glad/: glad.h
Graphics/glad/src/: glad.c  main.c
Haskell/Play/: CHANGELOG.md  Play.cabal  hackerrank_fp_1.hs  typeclass.hs
Haskell/Play/app/: Main.hs  Minimax.hs  typeclass.hs
Haskell/Play/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Haskell/my_foo/: CHANGELOG.md  my-foo.cabal
Haskell/my_foo/app/: LRParser.hs  Main.hs
Notebook/apue/: CMakeLists.txt  emacs-init.el
Notebook/apue/apue.3e/advio/: deadlock.c
Notebook/apue/ch1/: mycopy  mycopy-2.c  mycopy.c  mycopy2  mycopy2.c  myls  myls.c  print_process_id_1_6  print_process_id_1_6.c  test_static_and_non_static_variable.c  use_errno  use_errno.c  use_getpid.c  use_memset.c
Notebook/apue/ch3/: cp  hole  hole.c  open.c  test_lseek
Notebook/apue/include/: apue.h
Notebook/cpp_primer/: CMakeLists.txt  template_function.cpp
Notebook/cpp_primer/SalesItem/: addItems.cpp  ch2_book_store.cpp  ex-1-20-read_and_print  ex-1-20-read_and_print.cpp  ex_1_20_read_and_print_2.cpp  ex_1_21_read_and_add  ex_1_23_read_and_count.cpp  items.txt
Notebook/cpp_primer/ch2/: ex_2_17  ex_2_17.cpp  play_string.cpp  play_string.h  qr_bhSUee.out  signed_and_unsigned.cpp  use_string  use_string.cpp
Notebook/cpp_primer/ch5/: SalesItem.h  ex_5_23_read_and_divide_with_try_catch.cpp
Notebook/cpp_primer/ch6/: compare_string_size  compare_string_size.cpp  ex_6_3_fact.cpp  find_char.cpp
Notebook/cpp_primer/ch6/separate_compilatioin/: fact.h
Notebook/cpp_primer/play/: input_n_m_dimension_vector.cpp
Python/automate_boring_stuff/: main.py  pyproject.toml
Python/automate_boring_stuff/src/automate_boring_stuff/: __init__.py
Rust/bevy_snake/: Cargo.toml
Rust/bevy_snake/examples/: around_square.rs
Rust/bevy_snake/src/: main.rs
Rust/cookbook/: Cargo.toml  cert.pem  key.pem
Rust/cookbook/examples/: align.rs  bubble_sort.rs  byte_literal.rs  euclid_gcd.rs  find_parity_outlier.rs  fn_as_parameter.rs  fn_as_parameter_generic.rs  fn_as_return_value.rs  fn_as_return_value_generic.rs  fn_chain.rs  fn_slice.rs  fuck_string.rs  homogenious_series_sum.rs  iced_events.rs  iced_hello_world.rs  if_let.rs  josephus_permutation.rs  josephus_survivor.rs  learn_drop.rs  life_time.rs  linear.rs  link_list.rs  list_view.rs  memory_leak  memory_leak.rs  minesweeper_termion.rs  native_pointer.rs  never_type.rs  new_fn.rs  overflow.rs  owner_lose.rs  people_struct.rs  range.rs  repeat.rs  send_and_sync.rs  slice.rs  slider.rs  snake.rs  stdin.rs  str_from_utf8.rs  (+8 more)
Rust/cookbook/examples/learn_bevy/: Cargo.toml
Rust/cookbook/examples/learn_bevy/.cargo/: config
Rust/cookbook/examples/learn_nom/: Cargo.toml
Rust/cookbook/examples/mine/: main.rs
Rust/cookbook/src/: ferris_says.rs  lib.rs  parser.rs
Rust/cookbook/src/algorithms/: data_structures.rs
Rust/hews/: Cargo.toml
Rust/hews/src/: app.rs  hackernews.rs  main.rs
Rust/iced_play/: Cargo.toml
Rust/iced_play/src/: main.rs
Rust/learn_wgpu/: Cargo.toml
Rust/learn_wgpu/src/: main.rs
c/trapezoidal_rule/: CMakeLists.txt  main.c
(+2638 files in other folders)
