cabal-version:      3.6
name:               Play
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: For play

-- A longer description of the package.
-- description: 

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             vitalyr
maintainer:         vitalyankh@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Play
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, regex-applicative, containers
    hs-source-dirs:   app
    default-language: Haskell2010
