[project]
name = "automate-boring-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VitalyR", email = "vr@vitalyr.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
