[package]
name = "bevy_snake"
version = "0.1.0"
authors = ["vitalyr <vitalyankh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.3.0",features=["wayland"]}
rand = "0.7.3"

[features]
wayland=["bevy/wayland"]
