[package]
name = "cookbook"
version = "0.1.0"
authors = ["VitalyR <vitalyankh@gmail.com>"]
edition = "2018"

[dependencies]
tar="*"
ansi_term="*"
flate2="*"
wallpaper = "2.0.1"
orbtk = { git = "https://gitlab.redox-os.org/redox-os/orbtk.git" }
cursive = "0.11.1"
lazy_static = "1.3.0"
rand = "0.6.5"
termion = "1.5.3"
extra={git="https://gitlab.redox-os.org/redox-os/libextra"}
assert_cmd = "0.11.1"
futures = "0.1.26"
rayon = "1.1.0"
crossbeam = "0.7.1"
num = "0.2.0"
parking_lot = "0.8.0"
image="*"
