[package]
name = "cookbook"
version = "0.1.0"
authors = ["VitalyR <vitalyankh@gmail.com>"]
edition = "2018"

[dependencies]
tar="*"
ansi_term="*"
flate2="*"
wallpaper = "2.0.1"
# orbtk = { git = "https://gitlab.redox-os.org/redox-os/orbtk.git" }
cursive = "0.11.1"
lazy_static = "1.3.0"
rand = "0.6.5"
termion = "1.5.3"
extra={git="https://gitlab.redox-os.org/redox-os/libextra"}
assert_cmd = "0.11.1"
futures = "0.1.26"
rayon = "1.1.0"
crossbeam = "0.7.1"
num = "0.2.0"
parking_lot = "0.8.0"
image="*"
failure = "0.1.5"
toml = "0.5.1"

openssl = "0.10.23"
actix-rt = "*"
serde_derive = "1.0.94"
serde = {version="1.0.94",features=["derive"]}
serde_json = "1.0.40"
structopt = "0.3.3"
async-std = "*"
gnuplot = "0.0.32"
nom = "*"
actix-web = "2.0"
iced = "0.1.1"
log = "0.4.8"
pest = "2.1.3"
bevy = "0.0.1"
smallvec = "1.4.2"
textwrap = "0.12.1"
unicode-width = "0.1.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
