[package]
name = "cookbook"
version = "0.1.0"
authors = ["VitalyR <vitalyankh@gmail.com>"]
edition = "2018"

[dependencies]
tar="*"
ansi_term="*"
flate2="*"
wallpaper = "*"
# orbtk = { git = "https://gitlab.redox-os.org/redox-os/orbtk.git" }
cursive = "0.11.1"
lazy_static = "*"
rand = "*"
termion = "1.5.3"
extra={git="https://gitlab.redox-os.org/redox-os/libextra"}
assert_cmd = "*"
futures = "*"
rayon = "*"
crossbeam = "*"
num = "0.2.0"
parking_lot = "*"
image="*"
failure = "*"
toml = "*"

openssl = "*"
actix-rt = "*"
serde_derive = "*"
serde = {version="*",features=["derive"]}
serde_json = "*"
structopt = "*"
async-std = "*"
gnuplot = "0.0.32"
nom = "*"
actix-web = "*"
iced = "*"
log = "*"
pest = "*"
bevy = "*"
smallvec = "*"
textwrap = "0.12.1"
unicode-width = "0.1.8"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "my_benchmark"
harness = false
