[package]
name = "hews"
version = "0.1.0"
authors = ["VitalyR <vitalyankh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.7.0"

reqwest = "0.9.18"

serde = { version = "1.0.94", features = ["derive"] }

serde_derive= "1.0.94"
serde_json = "1.0.40"
