[package]
name = "iced_play"
version = "0.1.0"
authors = ["vitalyr <vitalyankh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/hecrj/iced.git", feature="image"}
iced_native = "0.2.2"
