[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
pollster = "0.2.4"
wgpu = "0.11.0"
winit = "0.25.0"
