[package]
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2021"
name = "deet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.11.0"
gimli = {git = "https://github.com/gimli-rs/gimli", rev = "ad23cdb2", default-features = false, features = ["read"]}
libc = "0.2.68"
memmap = "0.7"
nix = "0.17.0"
object = {version = "0.17", default-features = false, features = ["read"]}
rustyline = "6.1.2"
